examples/tactics/neg/NatNeg.fst.hints
[ "0ю¤^Ј¦nот\u0016‡9чЄЕO", [] ]